fix(pop-up): adding fixes for line-height and text-align on parent causing layout shift.

--- a/packages/web-components/src/components/rux-pop-up/rux-pop-up.scss
+++ b/packages/web-components/src/components/rux-pop-up/rux-pop-up.scss
@@ -2,6 +2,8 @@
     display: block;
     width: min-content;
     font-size: var(--font-size-base); //prevents icon shift from font-size declaration on parent.
+    line-height: var(--line-height-base); //fixes issue where parent element with larger line-height causes layout shift.
+    text-align: left;
 }
 
 .hidden,
